# particles

./: .gitignore  CMakeLists.txt  LICENSE.md  MakeFile  Makefile  Particle.cpp  Particle.hpp  ParticleType.cpp  ParticleType.hpp  README.md  ResonanceType.hpp  generate.cpp  main.cpp
analyse/: README.md  analyse.cpp  final.root
generate/: Makefile  Particle.cpp  README.md  generate.cpp
